Adding start-game endpoint implementation
